# memory_os_public

./: .gitattributes  .gitignore  AGENTS.md  INDEX.md  LICENSE  QUICKSTART.md  README.md  __init__.py  cli.py  com.newsresearch.memory_os.compact.plist  ingest_project.py  launch.sh  memory_graph_3d.html  memory_os.config.json  notion_sync_full.py  pyproject.toml  refactor_notion.py  rename_memos.py  rewrite_notion.py  run_llm_benchmark.py  test_auto.py  test_bridges_and_ui.py  test_cache.py  ui_launcher.py
.claude/skills/: archive_memory_node.py  create_memory_node.py
.github/workflows/: test.yml
agent_context/: CONTEXT.md  GLOBAL_ROADMAP.md  HANDSHAKE.md  SWARM_PROTOCOL.md  WORKFLOWS.md  development_log.md
core/: config.py  core.py  exceptions.py  interfaces.py  models.py  module_interface.py  orchestrator.py  prompt_formatter.py  storage.py  telemetry.py  workflow_manager.py
docs/: ARCHITECTURE.md
examples/: simple_agent.py
integration/: bug_reports.jsonl
media_skills/: analytics_engine_skill.md
memory/: memory_os.db
memory_graph/: nodes.jsonl
memory_os.egg-info/: PKG-INFO  SOURCES.txt
modules/: compactor.py  lifecycle.py  search.py
scripts/: swarm_invoke.py  swarm_sync.py
src/memory_os/: __main__.py  cli.py
src/memory_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/memory_os/adapters/: __init__.py  duckdb_adapter.py  langfuse_exporter.py  litellm_adapter.py  markitdown_adapter.py  mcp_adapter.py  mlflow_exporter.py  ollama_adapter.py  otel_exporter.py  phoenix_exporter.py  pydantic_ai_bridge.py  qdrant_adapter.py  temporal_adapter.py  vllm_provider.py
src/memory_os/core/: __init__.py  adapters.py  alerts.py  auditors.py  budget.py  config.py  context_pack.py  core.py  daemon.py  disk_guard.py  evidence.py  exceptions.py  file_policy.py  interfaces.py  llm_service.py  logger.py  models.py  patch.py  prompt_formatter.py  queue.py  registry.py  release_check.py  repository.py  resource_guard.py  retrieval.py  routing_policy.py  safe_id.py  scheduler.py  security_scan.py  storage.py  telemetry.py  telemetry_policy.py  toml_parser.py  write_budget.py
src/memory_os/data/: memory_os.db
src/memory_os/docs/: ENCYCLOPEDIA.md
src/memory_os/llm/: __init__.py  base.py  gateway.py  routing.py  types.py  validator.py
src/memory_os/memory/: memory_os.db
src/memory_os/memory_graph/: edges.jsonl
src/memory_os/modules/: compactor.py  context.py  exporter.py  lifecycle.py  optimizer.py  persona.py  search.py  validator.py  versioner.py
src/memory_os/toolkit/: auditor.py  base_extractor.py  compaction_runner.py  embedding_provider.py  eval_export.py  eval_runner.py  gdrive_sync.py  giant_scan.py  graph_mapper.py  graph_visualizer.py  lifecycle_cli.py  linear_sync.py  link_inferrer.py  memory_validator.py  notion_sync.py  obsidian_exporter.py  pipeline.py  prompt_compiler.py  prompt_registry.py  review_pack.py  run_records.py  search_cli.py  skills_exporter.py  spec_workflow.py  transcript_ingestor.py  (+1 more)
templates/: AGENT_RULES.md  CONSTITUTION.md  CONTEXT.md  HANDSHAKE.md  PROPOSALS.md  SWARM_PROTOCOL.md  WORKFLOWS.md
templates/scripts/: README.md  local_first_engine_template.py
templates/skills/: local_first_skill_template.md
templates/specs/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
tests/: test_task_capsules_validator.py  test_workflow_manifest.py
toolkit/: analyzer.py  giant_scan.py  quantizer.py  workflow_validator.py
user_persona/: persona.yaml
workflows/: architecture.giant.toml  chat.nano.toml  chat.standard.toml  code.small.toml  code.standard.toml
(+41 files in other folders)
