[project]
name = "memory_os"
version = "0.1.0"
description = "Portable agent Memory OS kernel — graph memory, telemetry, lifecycle, compaction, search."
readme = "docs/ARCHITECTURE.md"
requires-python = ">=3.9"
dependencies = ["ollama>=0.1.0", "openai>=1.0.0", "pydantic>=2.0.0"]

[project.scripts]
memory_os = "memory_os.cli:main"

[project.optional-dependencies]
# When used inside this host project — LLMClientFactory is resolved automatically.
# When portable — set GEMINI_API_KEY / OPENROUTER_API_KEY / OPENAI_API_KEY in env.
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["memory_os", "memory_os.*"]
