[project]
name = "memory_os"
version = "0.1.0"
description = "Portable agent Memory OS kernel — graph memory, telemetry, lifecycle, compaction, search."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
memory_os = "memory_os.cli:main"

[project.optional-dependencies]
# When used inside this host project — LLMClientFactory is resolved automatically.
# When portable — set GEMINI_API_KEY / OPENROUTER_API_KEY / OPENAI_API_KEY in env.
dev = ["pytest"]
providers-ollama = ["ollama>=0.1.0"]
providers-openai = ["openai>=1.0.0"]
resource-psutil = ["psutil>=5.9.0"]
validation-pydantic = ["pydantic>=2.0.0"]

# Optional adapters (see `memory_os adapters audit`).
# None of these are required for core/toolkit commands; each adapter lazy-imports its
# package and degrades to {"ok": False, "detail": "... not installed"} when absent.
adapters-litellm = ["litellm"]
adapters-markitdown = ["markitdown"]
adapters-duckdb = ["duckdb"]
adapters-otel = ["opentelemetry-api", "opentelemetry-sdk"]
adapters-qdrant = ["qdrant-client"]
adapters-phoenix = ["arize-phoenix"]
adapters-langfuse = ["langfuse"]
adapters-mlflow = ["mlflow"]
adapters-pydantic-ai = ["pydantic-ai"]
adapters-mcp = ["mcp"]
adapters-vllm = ["openai>=1.0.0"]
adapters-autogen = ["pyautogen"]
adapters-crewai = ["crewai"]
adapters-llamaindex = ["llama-index"]
adapters-semantic-kernel = ["semantic-kernel"]
adapters-haystack = ["haystack-ai"]
all = [
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "litellm",
    "markitdown",
    "duckdb",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "qdrant-client",
    "arize-phoenix",
    "langfuse",
    "mlflow",
    "pydantic-ai",
    "mcp",
    "pyautogen",
    "crewai",
    "llama-index",
    "semantic-kernel",
    "haystack-ai",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["memory_os", "memory_os.*"]
